...
                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" tag="33" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="NAME" textAlignment="center" lineBreakMode="tailTruncation" minimumScaleFactor="0.10000000000000001" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Y2d-zs-E9x">
                                <rect key="frame" x="16" y="121" width="568" height="358"/>
                                <accessibility key="accessibilityConfiguration" identifier="nameLabel" label=""/>
                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="250"/>
                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XQQ-Ld-jgW">
                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
...
                                <connections>
                                    <action selector="changeColor:" destination="BYZ-38-t0r" eventType="touchUpInside" id="uFO-eT-TZr"/>
                                </connections>
                            </button>
                            <button opaque="NO" tag="22" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="K36-8c-ql6">
                                <rect key="frame" x="234" y="550" width="200" height="50"/>
                                <accessibility key="accessibilityConfiguration" label="addNameButton"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="150" id="fcF-G0-pYL"/>
                                    <constraint firstAttribute="height" constant="40" id="ir0-dP-TRY"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                <state key="normal" title="Add/Change Name" backgroundImage="button_white">
                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                    <color key="titleShadowColor" red="0.96263307009999999" green="0.96263307009999999" blue="0.96263307009999999" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
                                <connections>
                                    <action selector="addName:" destination="BYZ-38-t0r" eventType="touchUpInside" id="dcy-oK-NC4"/>
                                </connections>
...
