...
        [self.nameLabel setText:name];
        [self.nameLabel setAccessibilityValue:name];
    }
}

- (IBAction)addName:(id)sender {
    UIAlertView *alertView = [[UIAlertView alloc] initWithTitle:alertViewTitle message:alertViewMessage delegate:self cancelButtonTitle:@"Cancel" otherButtonTitles:@"OK", nil] ;
    alertView.tag = 2;
    alertView.alertViewStyle = UIAlertViewStylePlainTextInput;
    [alertView show];
}


...
